--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "browser-env": "^3.3.0",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "detect-node": "^2.1.0",
+    "device-uuid": "^1.0.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "googleapis": "^100.0.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16"
   }
 }
